<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/name_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_name_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_rate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/rate_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/employee_rate_hint" />



</LinearLayout>