<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/employee_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_rate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/employee_edit_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/employee_edit_submit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight=".5" />

        <Button
            android:id="@+id/employee_edit_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/cancel" 
            android:layout_weight=".5"/>

    </LinearLayout>

</LinearLayout>