<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:text="@string/totals"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/hour_display"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="right"
            android:text="@string/lawn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/minute_display"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="right"
            android:text="@string/lawn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
  <Button
      android:id="@+id/button_breakdown"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/breakdown" 
      android:layout_gravity="center"/>

  <ListView
      android:id="@+id/employee_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >
  </ListView>
    
</LinearLayout>