<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical" >


            <TextView
                android:id="@+id/adding_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_lawn"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

            <TextView
                android:id="@+id/adding_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" >

            </EditText>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnersShown="false" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

</LinearLayout>